Restore Ethernet-within-IP Encapsulation support that was broken after r273087. Move all checks from gif_output() into gif_transmit(). Previously they were checked always, because if_start always called gif_output. Now gif_transmit() can be called directly from if_bridge() code and we need do checks here.

PR:		196646
MFC after:	1 week


git-svn-id: svn+ssh://svn.freebsd.org/base/head@276907 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f